# Bid-System

./: .gitignore  Bid_System_Document.docx  bidder_ids.txt
CSePs/: README.md  ReadMe.txt  config.py  main.py
CSePs/crypto/: ecc_keys.py  encrypt_decrypt.py  encrypt_decrypt_authority.py  hash_utils.py  sign_verify.py
CSePs/docs/: security_analysis.md  threat_model.md
CSePs/ledger/: ledger.py
CSePs/roles/: authority.py  bidder.py  evaluator.py
cseps-api/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
cseps-api/app/: main.py
cseps-api/app/api/: audit.py  auth.py  bids.py  evaluator.py  procurements.py
cseps-api/app/core/: config.py  dependencies.py  email.py  security.py
cseps-api/app/db/: engine.py
cseps-api/app/models/: __init__.py  bid.py  ledger.py  procurement.py  user.py
cseps-api/app/schemas/: auth.py  bid.py  procurement.py
cseps-api/app/services/: ceremony.py  ledger.py
cseps-web/: package-lock.json  package.json
